[package]
name = "devil_apartment_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
bytemuck = "1.10"
bytemuck_derive = "1.1.0"
pollster = "0.2"
glam = "0.21"
egui = { git = "https://github.com/emilk/egui" }
egui-wgpu = { git = "https://github.com/emilk/egui" }
egui-winit = { git = "https://github.com/emilk/egui" }
chrono = "0.4.19"
